--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,8 @@
-build:
+kind: pipeline
+name: default
+
+steps:
+- name: test
   image: java:openjdk-8
-  environment:
-    - GRADLE_USER_HOME=~/.gradle
   commands:
-    - ./gradlew test
+  - GRADLE_USER_HOME=~/.gradle ./gradlew test
